# research

./: .clinerules  .gitignore  Cargo.toml  README.md  ai-datacenter-environmental-impact.md  fix_alkanes_support.sh  fix_dependencies.sh  fix_view_imports.sh  memory_test  memory_test.rs  memory_test_output.md  package-lock.json  standalone_test  update_imports.sh
__test__/unit/contracts/: Fart.ts  TinyBonds.ts
__test__/unit/tests/: fart.ts  fuzz.ts  tinyBonds.ts  vesting.ts
alkanes/: Cargo.toml
alkanes/src/: lib.rs
bitcoin/: bitcoin-comprehensive-review.md
contracts/bonding-contract/: Cargo.toml  config.json  flow_test_output.txt  output.txt  test_output.txt
contracts/bonding-contract/src/: additional_tests.rs  alkane_id_ext.rs  block_test_helpers.rs  bond_curve.rs  bond_orbital.rs  bonding_curve.rs  coverage_tests.rs  e2e_tests.rs  e2e_tests_updated.rs  extreme_value_tests.rs  isolated_tests.rs  lib.rs  local_test_helpers.rs  mock_context.rs  mock_runtime.rs  mock_storage.rs  penetration_tests.rs  precision_tests.rs  reset_mock_environment.rs  simple_test.rs  test_helpers_imported.rs  tests.rs
contracts/bonding-contract/tests/: basic_test.rs  block_based_flow_test.rs  block_based_test.rs  bond_curve_test.rs  code_coverage_test.rs  context_test.rs  curve_test.rs  debug_flow_test.rs  flow_test.rs  integration_test.rs  orbital_flow_test.rs  orbital_test.rs  public_api_test.rs  simple_flow_test.rs  standalone_block_test.rs
crates/alkanes-macros/src/: lib.rs
crates/alkanes-runtime/: Cargo.toml
crates/alkanes-std-owned-token/: Cargo.toml
crates/alkanes-support/src/: lib.rs  parcel.rs  prelude.rs
crates/metashrew/: Cargo.toml
crates/metashrew-support/src/: index_pointer.rs
crates/metashrew/examples/: native_indexer.rs  proto_indexer.rs  simple_indexer.rs
crates/metashrew/src/: host.rs  index_pointer.rs  lib.rs  macros.rs  view.rs  wasm_exports.rs
crates/metashrew/src/tests/: index_pointer.rs
crates/protorune/: Cargo.toml
crates/protorune-support/: Cargo.toml
crates/protorune-support/src/: balance_sheet_ext.rs  lib.rs
crates/protorune/src/: lib.rs  protostone.rs  test_helpers.rs  view.rs
crates/protorune/src/tests/: index_op_return_position.rs  index_protoburns.rs  index_protomessage.rs  index_protorunes_by_address.rs  index_runes.rs  index_runes_edicts.rs  index_runes_mint.rs  multi_protocol.rs  test_cenotaphs.rs
docs/: block_based_testing_guide.md  bonding-contract-api.md  bonding-curve.md  config-default.md  config-mainnet.md  config-testnet.md  psychedelics-mental-health-meta-analysis.md
examples/: bonding_contract_example.rs
free-masonry/: morals-and-dogma-analysis.md  morals-and-dogma.txt
memory-bank/: activeContext.md  bonding-contract.md  bonding_contract_factory_child_pattern.md  bonding_contract_fixes.md  bonding_contract_implementation_fixes.md  bonding_contract_implementation_status.md  bonding_contract_issues.md  bonding_contract_linking_guide.md  bonding_contract_next_steps.md  bonding_contract_verification_results.md  progress.md  test_paradigm_integration.md  test_paradigm_next_steps.md
neuroscience/: nootropics-cognitive-enhancement-review.audit.md  nootropics-cognitive-enhancement-review.md  psychedelic-cognitive-enhancement-review.md  psychedelics-mental-health-meta-analysis.md
politics/: congressional_funding_analysis_2024.md  misattribution-capitalism-socialism-meta-analysis.md  us_imperialism_1900s_to_present.md
scripts/: build.sh  configure.js  deploy-default.sh  deploy-mainnet.sh  deploy-testnet.sh  deploy.sh  deploy_full.sh  run_tests.sh  visualize.js
src/TinyBonds/: TinyBonds.ts  index.ts
src/fart/: Fart.ts  index.ts
src/tests/std/: alk4626_position_token_build.rs
tests/: benchmark_test.rs  bonding_contract_test.rs  integration_test.rs  market_simulation_test.rs  standalone_test.rs
