[workspace]
resolver = "2"
members = [
    "contracts/bonding-contract",
    "crates/alkanes-build",
    "crates/alkanes-common",
    "crates/alkanes-macros",
    "crates/alkanes-runtime",
    "crates/alkanes-std-auth-token",
    "crates/alkanes-std-collection",
    "crates/alkanes-std-factory-support",
    "crates/alkanes-std-genesis-alkane",
    "crates/alkanes-std-genesis-protorune",
    "crates/alkanes-std-merkle-distributor",
    "crates/alkanes-std-mintable",
    "crates/alkanes-std-orbital",
    "crates/alkanes-std-owned-token",
    "crates/alkanes-std-proxy",
    "crates/alkanes-std-test",
    "crates/alkanes-std-upgradeable",
    "crates/alkanes-support",
    "crates/metashrew",
    "crates/metashrew-support",
    "crates/ordinals",
    "crates/protorune",
    "crates/protorune-support"
]

[workspace.dependencies]
alkanes-runtime = { path = "crates/alkanes-runtime" }
alkanes-support = { path = "crates/alkanes-support" }
alkanes-macros = { path = "crates/alkanes-macros" }
alkanes-common = { path = "crates/alkanes-common" }
metashrew-support = { path = "crates/metashrew-support" }
protorune-support = { path = "crates/protorune-support" }
anyhow = { version = "1.0", features = ["backtrace"] }
