[package]
name = "alkanes"
version = "0.2.3"
edition = "2021"
description = "ALKANES metaprotocol"
license = "MIT"
repository = "https://github.com/kungfuflex/alkanes-rs"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { workspace = true }
metashrew = { path = "../crates/metashrew" }
metashrew-support = { path = "../crates/metashrew-support" }
protorune = { path = "../crates/protorune" }
protorune-support = { path = "../crates/protorune-support" }
alkanes-support = { path = "../crates/alkanes-support" }
alkanes-runtime = { path = "../crates/alkanes-runtime" }
bitcoin = { workspace = true }
serde = "1.0.213"
flate2 = "1.0.34"
protobuf = { workspace = true }
hex = { workspace = true }
byteorder = { workspace = true }
ruint = { workspace = true }

[features]
default = []
test-utils = ["protorune/test-utils", "metashrew/test-utils"]
