[package]
name = "bonding-contract"
version = "0.1.0"
edition = "2021"
description = "Bonding contract implementation for the Alkanes metaprotocol"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
alkanes-runtime = { path = "/Users/erickdelgado/Documents/GitHub/boiler/crates/alkanes-runtime", features = ["test-utils"] }
alkanes-support = { workspace = true }
alkanes-macros = { workspace = true }
alkanes-common = { workspace = true }
metashrew-support = { workspace = true }
anyhow = { workspace = true }
lazy_static = "1.4.0"
bitcoin = "0.32.4"
metashrew = { path = "/Users/erickdelgado/Documents/GitHub/boiler/crates/metashrew" }
protorune = { path = "/Users/erickdelgado/Documents/GitHub/boiler/crates/protorune", features = ["test-utils"] }
protorune-support = { workspace = true }
alkanes = { path = "/Users/erickdelgado/Documents/GitHub/boiler/alkanes", features = ["test-utils"], default-features = false }
byteorder = { workspace = true }
hex = { workspace = true }
ordinals = { path = "/Users/erickdelgado/Documents/GitHub/boiler/crates/ordinals" }

[dev-dependencies]
alkanes = { path = "/Users/erickdelgado/Documents/GitHub/boiler/alkanes", features = ["test-utils"], default-features = false }
metashrew-core = { git = "https://github.com/sandshrewmetaprotocols/metashrew", features = ["test-utils"] }
wasm-bindgen-test = "0.3.40"
once_cell = "1.19.0"
hex_lit = "0.1.1"


[features]
default = []
gc = []  # Feature flag for garbage collection
test = []
